--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -12,42 +12,42 @@
         <form class="w-full max-w-sm" id="user-form">
             <div class="md:flex md:items-center mb-6">
               <div class="md:w-1/3">
-                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="name">
                   Name
                 </label>
               </div>
               <div class="md:w-2/3">
-                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="inline-full-name" type="text" placeholder="enter full name here">
+                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="name" type="text" placeholder="enter full name here">
               </div>
             </div>
             <div class="md:flex md:items-center mb-6">
                 <div class="md:w-1/3">
-                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-email">
+                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="email">
                     Email
                   </label>
                 </div>
                 <div class="md:w-2/3">
-                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="inline-email" type="email" placeholder="enter email here">
+                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="email" type="email" placeholder="enter email here">
                 </div>
               </div>
             <div class="md:flex md:items-center mb-6">
               <div class="md:w-1/3">
-                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-password">
+                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="password">
                   Password
                 </label>
               </div>
               <div class="md:w-2/3">
-                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="inline-password" type="password" placeholder="******************">
+                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="password" type="password" placeholder="******************">
               </div>
             </div>
             <div class="md:flex md:items-center mb-6">
                 <div class="md:w-1/3">
-                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-dob">
+                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="dob">
                     Date of Birth
                   </label>
                 </div>
                 <div class="md:w-2/3">
-                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" max="2005-01-11" min="1968-01-11" id="inline-dob" type="date">
+                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" max="2005-01-11" min="1968-01-11" id="dob" type="date">
                 </div>
               </div>
             <div class="md:flex md:items-center mb-6">
@@ -68,13 +68,16 @@
                 </button>
               </div>
             </div>
-          </form>         
+          </form>
+          
     </div>
     <div class="relative bg-white px-6 mt-5 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:rounded-lg sm:px-10">
       <div class="mx-auto">
         <h2 class="text-3xl text-center font-bold leading-tight">Entries</h2>
         <div class="divide-y divide-gray-300/50" id="userEntriesDiv"></div>
+
       </div>
+
     </div>
 <script src="./registration.js"> </script>
 </body>
